modified nav ul, fixed paragraphs and footer alignment in mobile view. Added alignments for image,paragraphs and footer in desktop view

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -35,24 +35,31 @@ li {
     h1 {
         display: flex;
         justify-content: center;
-
+        font-size: 4em;
     }
     li {
         display: flex;
         justify-content: center;
-        background: lightgrey;
-        margin: 5px;
     }
     .nav-links {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    nav {
+    nav ul{
         display: flex;
-        justify-content: center;
-        align-content: stretch;
+        justify-content: flex-start;
+        align-items: center;
+        margin: 0;
+        padding: 0;
+    }
+    nav ul li{
+        background: lightgrey;
         width: 100%;
+        margin: 5px;
+        padding-top: .75em;
+        padding-bottom: .75em;
+        font-size: 1.25em;
     }
     img {
         display: block;
@@ -60,15 +67,15 @@ li {
         width: 100%;
     }
     .main {
-        margin: 1.25em 0;
+        margin: 2em 0;
     }
     .sub-section {
-        margin: 1.25em 0;
+        margin: 2em 0;
+        font-style: italic;
     }
     footer {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
+        margin-top: 5em;
+        margin-bottom: .5em;
     }
 }
 
@@ -83,9 +90,28 @@ li {
         display: flex;
         justify-content: flex-end;
         float: right;
-
     }
     h1 {
         float: left;
+    }
+    img {
+        display: block;
+        margin: auto;
+        width: 100%;
+    }
+    .main{
+        float: left;
+        width: calc(50% - .5em);
+    }
+    .sub-section{
+        float: right;
+        width: calc(50% - .5em);
+    }
+    footer{
+        margin-top: 10em;
+        margin-bottom: .5em;
+    }
+    h2{
+        padding-bottom: 1em;
     }
 }
